Fix alignment and padding changes

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -4,7 +4,6 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .header {
@@ -28,7 +27,7 @@ body {
 }
 
 .sidebar {
-  flex: 0 0 auto;
+  flex-shrink: 0;
   width: 300px;
   background: royalblue;
   padding: 16px;
@@ -38,8 +37,9 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  max-width: 300px;
-  max-height: 300px;
+  width: 300px;
+  padding: 16px;
+  margin: 16px;
 }
 
 .main {
@@ -50,9 +50,6 @@ body {
 .cards {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  align-content: center;
-  gap: 25px;
   padding: 32px;
 }
 
@@ -68,5 +65,5 @@ ul {
   gap: 16px;
   list-style-type: none;
   margin: 0;
-  padding: 5px;
+  padding: 0px;
 }
